bjó til easy og hard borðin líka og button svæðið sem verður í þeim öllum

--- a/src/main/resources/vidmot/slanga_pro/medium-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/medium-view.fxml
@@ -32,6 +32,6 @@
        </GridPane>
    </center>
    <bottom>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+       <fx:include source="button-view.fxml" />
    </bottom>
 </BorderPane>
