--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -1,6 +1,6 @@
 
 .dice-1 {
-    -fx-background-image: url("images/Einn.png");
+    -fx-background-image: url("images/dice/1.png ");
     -fx-background-size: 100% 100%;
     -fx-background-position: center;
     -fx-background-repeat: no-repeat;
