--- a/src/main/resources/vidmot/slanga_pro/button-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/button-view.fxml
@@ -25,7 +25,7 @@
                </children>
             </VBox>
             <ImageView fx:id="fxDice" fitHeight="114.0" fitWidth="118.0" nodeOrientation="INHERIT" onMousePressed="#diceHandler" pickOnBounds="true" preserveRatio="true">
-               <Image url="@../../css/images/Einn.png" />
+               <Image url="@../../css/images/dice/1.png" />
             </ImageView>
          </children>
       </HBox>
