--- a/src/main/resources/vidmot/slanga_pro/setting-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/setting-view.fxml
@@ -5,7 +5,12 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SettingController">
    <children>
-      <Button layoutX="205.0" layoutY="400.0" mnemonicParsing="false" onAction="#onAftur" text="Aftur að borði" />
-      <ComboBox fx:id="fxDifficulty" layoutX="175.0" layoutY="159.0" prefWidth="150.0" promptText="Veldu erfiðleikastig" />
+      <Label layoutX="175.0" layoutY="50.0" prefWidth="150.0" text="Veldu fjölda leikmanna:" />
+      <Spinner fx:id="fxPlayers" layoutX="175.0" layoutY="80.0" prefWidth="150.0" />
+      <Label layoutX="175.0" layoutY="120.0" prefWidth="150.0" text="Veldu erfiðleikastig:" />
+      <ComboBox fx:id="fxDifficulty" layoutX="175.0" layoutY="150.0" prefWidth="150.0" promptText="Erfiðleikastig"/>
+      <Label layoutX="175.0" layoutY="190.0" prefWidth="150.0" text="Veldu þema:" />
+      <ComboBox fx:id="fxTheme" layoutX="175.0" layoutY="220.0" prefWidth="150.0" promptText="Þemu" />
+      <Button layoutX="205.0" layoutY="400.0" mnemonicParsing="false" onAction="#onSpila" text="Spila" />
    </children>
 </AnchorPane>
