--- a/src/main/resources/vidmot/slanga_pro/start-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/start-view.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.StartController">
+<AnchorPane prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.StartController">
    <children>
-      <ImageView fitHeight="210.0" fitWidth="400.0" layoutX="66.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="557.0" fitWidth="456.0" layoutX="64.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../css/images/Upphafsmynd.png" />
+            <Image url="@../../css/images/snake-background.png" />
          </image>
       </ImageView>
-      <Button layoutX="229.0" layoutY="395.0" mnemonicParsing="false" onAction="#onSpila" text="Spila" />
+      <Button layoutX="229.0" layoutY="650.0" mnemonicParsing="false" onAction="#onSpila" text="Spila" />
    </children>
 </AnchorPane>
