--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -4,4 +4,86 @@
     -fx-background-size: 100% 100%;
     -fx-background-position: center;
     -fx-background-repeat: no-repeat;
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+}
+
+.dice-2 {
+    -fx-background-image: url("images/dice/2.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+}
+
+.dice-3 {
+    -fx-background-image: url("images/dice/3.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+}
+
+.dice-4 {
+    -fx-background-image: url("images/dice/4.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+}
+
+.dice-5 {
+    -fx-background-image: url("images/dice/5.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+}
+
+.dice-6 {
+    -fx-background-image: url("images/dice/6.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+    -fx-pref-height: 100px;
+    -fx-pref-width: 100px;
+}
+
+.player1 {
+    -fx-background-image: url("images/characters/player1.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+}
+
+.player2 {
+    -fx-background-image: url("images/player2.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+}
+
+.player3 {
+    -fx-background-image: url("images/player3.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+}
+
+.player4 {
+    -fx-background-image: url("images/player4.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
+}
+
+.player5 {
+    -fx-background-image: url("images/player5.png ");
+    -fx-background-size: 100% 100%;
+    -fx-background-position: center;
+    -fx-background-repeat: no-repeat;
 }
