--- a/src/main/resources/vidmot/slanga_pro/medium-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/medium-view.fxml
@@ -4,14 +4,12 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
-   <children>
 
-   </children>
     <top>
         <fx:include source="menu-view.fxml" />
     </top>
    <center>
-       <GridPane gridLinesVisible="true" layoutX="37.0" layoutY="36.0" prefHeight="301.0" prefWidth="426.0">
+       <GridPane fx:id="fxTable" gridLinesVisible="true" layoutX="37.0" layoutY="36.0" prefHeight="301.0" prefWidth="426.0">
            <columnConstraints>
                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,6 +24,37 @@
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
            </rowConstraints>
+           <children>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="0" />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="1"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="2"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="3"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="4"  />
+
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="4" />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="3"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="2"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="1"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="0"  />
+
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="1"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="2"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="3"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="4"  />
+
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="4" />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="3"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="2"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="1"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="0"  />
+
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="1"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="2"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="3"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="4"  />
+           </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
