--- a/src/main/resources/vidmot/slanga_pro/menu-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/menu-view.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.scene.control.*?>
 
-<MenuBar xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-         fx:controller="vidmot.slanga_pro.SlangaController" >
+<MenuBar xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<!--         fx:controller="vidmot.slanga_pro.SlangaController" -->
+
     <menus>
         <Menu mnemonicParsing="false" text="Leikur">
             <items>
