--- a/src/main/resources/vidmot/slanga_pro/hard-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/hard-view.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Button?>
 <BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
     <children>
 
@@ -125,12 +126,7 @@
                         <ProgressBar prefWidth="200.0" progress="0.0" />
                     </children>
                 </VBox>
-                <ImageView fx:id="fxDice" fitHeight="114.0" fitWidth="118.0" nodeOrientation="INHERIT" onMousePressed="#diceHandler" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../../css/images/dice/6.png" />
-                    <HBox.margin>
-                        <Insets right="10.0" />
-                    </HBox.margin>
-                </ImageView>
+                <Button fx:id="fxDice" nodeOrientation="INHERIT" onMousePressed="#diceHandler" pickOnBounds="true" styleClass="dice-1" />
             </children>
         </HBox>
     </bottom>
