--- a/src/main/resources/vidmot/slanga_pro/hard-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/hard-view.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.Button?>
-<BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
+<BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/classic.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
     <children>
 
     </children>
@@ -59,47 +53,155 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="5">
+               <children>
+                  <Label text="1" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <children>
+                  <Label text="2" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
+               <children>
+                  <Label text="3" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="5">
+               <children>
+                  <Label text="4" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="5">
+               <children>
+                  <Label text="5" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="5">
+               <children>
+                  <Label text="6" />
+               </children></StackPane>
 
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="4">
+               <children>
+                  <Label text="7" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="4">
+               <children>
+                  <Label text="8" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
+               <children>
+                  <Label text="9" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <children>
+                  <Label text="10" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <Label text="11" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <children>
+                  <Label text="12" />
+               </children></StackPane>
 
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <children>
+                  <Label text="13" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <Label text="14" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <children>
+                  <Label text="15" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <children>
+                  <Label text="16" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="3">
+               <children>
+                  <Label text="17" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="3">
+               <children>
+                  <Label text="18" />
+               </children></StackPane>
 
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="2">
+               <children>
+                  <Label text="19" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
+               <children>
+                  <Label text="20" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <children>
+                  <Label text="21" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <children>
+                  <Label text="22" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Label text="23" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <children>
+                  <Label text="24" />
+               </children></StackPane>
 
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <children>
+                  <Label text="25" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <Label text="26" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <Label text="27" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <children>
+                  <Label text="28" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <children>
+                  <Label text="29" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="1">
+               <children>
+                  <Label text="30" />
+               </children></StackPane>
 
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="0" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="0" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="5" GridPane.rowIndex="0">
+               <children>
+                  <Label text="31" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="0">
+               <children>
+                  <Label text="32" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="0">
+               <children>
+                  <Label text="33" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="0">
+               <children>
+                  <Label text="34" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+               <children>
+                  <Label text="35" />
+               </children></StackPane>
+                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <children>
+                  <Label text="36" />
+               </children></StackPane>
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -108,7 +210,7 @@
     </center>
     <bottom>
 <!--        <fx:include source="button-view.fxml" />-->
-        <HBox alignment="CENTER" prefHeight="200.0" prefWidth="714.0" stylesheets="@../../css/styles.css">
+        <HBox alignment="CENTER" prefHeight="200.0" prefWidth="714.0" stylesheets="@../../css/dice.css">
             <children>
                 <VBox prefHeight="200.0" prefWidth="171.0">
                     <children>
