--- a/src/main/resources/vidmot/slanga_pro/medium-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/medium-view.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.Button?>
-<BorderPane prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
+<BorderPane prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
 
     <top>
 <!--        <fx:include source="menu-view.fxml" />-->
-        <MenuBar >
+        <MenuBar>
             <menus>
                 <Menu mnemonicParsing="false" text="Leikur">
                     <items>
@@ -38,7 +32,7 @@
         </MenuBar>
     </top>
    <center>
-       <GridPane fx:id="fxTable" gridLinesVisible="true" layoutX="37.0" layoutY="36.0" prefHeight="301.0" prefWidth="426.0">
+       <GridPane fx:id="fxTable" gridLinesVisible="true" layoutX="37.0" layoutY="36.0" prefHeight="301.0" prefWidth="426.0" stylesheets="@../../css/classic.css">
            <columnConstraints>
                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -55,35 +49,110 @@
            </rowConstraints>
            <children>
 
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="0" />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="1"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="2"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="3"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="4" GridPane.columnIndex="4"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <children>
+                  <Label text="1" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <Label text="2" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <children>
+                  <Label text="3" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
+               <children>
+                  <Label text="4" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="4">
+               <children>
+                  <Label text="5" />
+               </children></StackPane>
 
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="4" />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="3"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="2"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="1"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="3" GridPane.columnIndex="0"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="3">
+               <children>
+                  <Label text="6" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
+               <children>
+                  <Label text="7" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <children>
+                  <Label text="8" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <Label text="9" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <children>
+                  <Label text="10" />
+               </children></StackPane>
 
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="0" />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="1"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="2"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="3"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="2" GridPane.columnIndex="4"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <children>
+                  <Label text="11" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <Label text="12" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <children>
+                  <Label text="13" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
+               <children>
+                  <Label text="14" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
+               <children>
+                  <Label text="15" />
+               </children></StackPane>
 
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="4" />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="3"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="2"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="1"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="1" GridPane.columnIndex="0"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <children>
+                  <Label text="16" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <children>
+                  <Label text="17" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <Label text="18" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <Label text="19" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <children>
+                  <Label text="20" />
+               </children></StackPane>
 
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="0" />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="1"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="2"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="3"  />
-               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.rowIndex="0" GridPane.columnIndex="4"  />
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <children>
+                  <Label text="21" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="0">
+               <children>
+                  <Label text="22" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="0">
+               <children>
+                  <Label text="23" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="0">
+               <children>
+                  <Label text="24" />
+               </children></StackPane>
+               <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="4" GridPane.rowIndex="0">
+               <children>
+                  <Label text="25" />
+               </children></StackPane>
            </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -95,15 +164,12 @@
    </center>
    <bottom>
 <!--       <fx:include source="button-view.fxml" />-->
-       <HBox alignment="CENTER" prefHeight="200.0" prefWidth="714.0" stylesheets="@../../css/styles.css">
+       <HBox alignment="CENTER" prefHeight="200.0" prefWidth="714.0" stylesheets="@../../css/dice.css">
            <children>
                <VBox prefHeight="200.0" prefWidth="171.0">
                    <children>
-                       <Label text="Chill guy á að gera" />
-                       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                               <Image url="@../../css/images/characters/ChillGIF.gif" />
-                           </image></ImageView>
+                       <Label fx:id="fxNextPlayerLabel" text="Chill guy á að gera" />
+                       <ImageView fx:id="fxNextPlayerImg" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" styleClass="player1" />
                    </children></VBox>
                <VBox prefHeight="200.0" prefWidth="213.0">
                    <children>
@@ -113,7 +179,7 @@
                        <ProgressBar prefWidth="200.0" progress="0.0" />
                    </children>
                </VBox>
-               <Button fx:id="fxDice" nodeOrientation="INHERIT" onMousePressed="#diceHandler" pickOnBounds="true" styleClass="dice-1" />
+               <Button fx:id="fxDice" onMousePressed="#diceHandler" styleClass="dice-1" />
            </children>
        </HBox>
    </bottom>
