--- a/src/main/resources/vidmot/slanga_pro/easy-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/easy-view.fxml
@@ -57,7 +57,7 @@
                <children>
                   <Label text="2" />
                </children></StackPane>
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                <StackPane prefHeight="301.0" prefWidth="426.0" styleClass="ladder" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <children>
                   <Label text="3" />
                </children></StackPane>
@@ -74,11 +74,11 @@
                <children>
                   <Label text="6" />
                </children></StackPane>
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <StackPane prefHeight="301.0" prefWidth="426.0" styleClass="ladder" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <Label text="7" />
                </children></StackPane>
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                <StackPane prefHeight="301.0" prefWidth="426.0" styleClass="snake" GridPane.columnIndex="0" GridPane.rowIndex="2">
                <children>
                   <Label text="8" />
                </children></StackPane>
@@ -91,7 +91,7 @@
                <children>
                   <Label text="10" />
                </children></StackPane>
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                <StackPane prefHeight="301.0" prefWidth="426.0" styleClass="snake" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <children>
                   <Label text="11" />
                </children></StackPane>
@@ -100,7 +100,7 @@
                   <Label text="12" />
                </children></StackPane>
 
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="3" GridPane.rowIndex="0">
+                <StackPane prefHeight="301.0" prefWidth="426.0" styleClass="snake" GridPane.columnIndex="3" GridPane.rowIndex="0">
                <children>
                   <Label text="13" />
                </children></StackPane>
@@ -112,7 +112,7 @@
                <children>
                   <Label text="15" />
                </children></StackPane>
-                <StackPane prefHeight="301.0" prefWidth="426.0" GridPane.columnIndex="0" GridPane.rowIndex="0" styleClass="end">
+                <StackPane prefHeight="301.0" prefWidth="426.0" styleClass="end" GridPane.columnIndex="0" GridPane.rowIndex="0">
                <children>
                   <Label text="16" />
                </children></StackPane>
