--- a/src/main/resources/vidmot/slanga_pro/end-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/end-view.fxml
@@ -4,10 +4,10 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.EndController">
+<AnchorPane fx:id="fxAnchor" prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.EndController" stylesheets="@../../css/classic.css">
    <children>
       <Button layoutX="224.0" layoutY="601.0" mnemonicParsing="false" onAction="#onAftur" text="Spila aftur" />
-      <ImageView fx:id="fxImage" fitHeight="150.0" fitWidth="200.0" layoutX="150.0" layoutY="275.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="fxWinner" layoutX="154.0" layoutY="137.0" text="xxx er sigurvegari leiksins!" />
+      <Label fx:id="fxWinnerImg" layoutX="0.0" layoutY="0.0" prefWidth="100" prefHeight="100" styleClass="player1" visible="false"/>
+      <Label fx:id="fxWinner" layoutX="154.0" layoutY="137.0" text="" />
    </children>
 </AnchorPane>
