--- a/src/main/resources/vidmot/slanga_pro/medium-view.fxml
+++ b/src/main/resources/vidmot/slanga_pro/medium-view.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="700.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
+<BorderPane fx:id="fxRoot" prefHeight="700.0" prefWidth="500.0" stylesheets="@../../css/classic.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vidmot.slanga_pro.SlangaController">
 
     <top>
 <!--        <fx:include source="menu-view.fxml" />-->
@@ -32,7 +42,7 @@
         </MenuBar>
     </top>
    <center>
-       <GridPane fx:id="fxTable" gridLinesVisible="true" layoutX="37.0" layoutY="36.0" prefHeight="301.0" prefWidth="426.0" stylesheets="@../../css/classic.css">
+       <GridPane fx:id="fxTable" gridLinesVisible="true" layoutX="37.0" layoutY="36.0" prefHeight="301.0" prefWidth="426.0">
            <columnConstraints>
                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -168,8 +178,9 @@
            <children>
                <VBox prefHeight="200.0" prefWidth="171.0">
                    <children>
-                       <Label fx:id="fxNextPlayerLabel" text="Chill guy á að gera" />
-                       <ImageView fx:id="fxNextPlayerImg" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" styleClass="player1" />
+                       <Label fx:id="fxNextPlayerLabel" text="Ýttu á teninginn til að byrja" />
+                       <Label fx:id="fxNextPlayerImg" prefHeight="180.0" prefWidth="180.0" styleClass="player1" />
+
                    </children></VBox>
                <VBox prefHeight="200.0" prefWidth="213.0">
                    <children>
